group 'com.example'
version '0.0.1-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8


repositories {
    mavenCentral()
    maven { url "https://repo.spring.io/snapshot" }
    maven { url "https://repo.spring.io/milestone" }
}

dependencies {
    compile project(":plugin")

    compile group: 'io.reactivex', name:'rxjava', version: rxJava1Version
    compile group: 'io.projectreactor', name: 'reactor-core', version: reactorVersion
    compile group: 'io.projectreactor.addons', name: 'reactor-extra', version: reactorExtraVersion
    compile group: 'javax.inject', name: 'javax.inject', version: diSpecVersion


    compile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'io.projectreactor', name: 'reactor-test', version: reactorVersion

    testCompile group: 'org.powermock', name:'powermock-module-junit4', version: powerMockVersion
    testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: powerMockVersion
    testCompile group: 'com.google.guava', name: 'guava', version: guavaVersion
}
